# trench

./: .gitattributes  .gitignore  AGENTS.md  BODIES.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  DOCTRINE.md  FILTER_ARTIFACTS.json  MODES.md  PHONEMES.md  PLAN_RECIPE_V1.md  README.md  REPO_TRUTH.json  REPO_TRUTH.md  SESSION_NOTES_2026-04-17.md  SHIPPING.md  SPEC.md  TRUTH_MAP.md  cartridge.schema.json  check  check_compile.ps1  handoff.json  taste_model.json.dead  trench_eos_pipeline_compiler.py
.claude/: settings.local.json
authoring/: CLAUDE.md  FILTER_WORK.md  GROUND_TRUTH.md  MIGRATION_STATE.md  README.md  SESSION_START.md  SOURCES.md  audition.py
authoring/_research/: HANDOFF_GPT55.md  SEED.md  iconic_author_root_variant.py  phoneme_author_studio_forge_42k.py  phoneme_author_studio_root_74k.py
authoring/atlas/: pole_atlas.json  pole_atlas_summary.csv
authoring/bodies/: trap_vowel_slam.py
authoring/compilers/: annotate_pack_with_calibration.py  audit_morph_trajectory.py  author_cheatcode.py  bake_hedz_const.py  bake_phoneme_pills.py  bake_speaker_knockerz_sealed.py  bark.py  body_dsl.py  body_extruder.html  build_blender_cyan_glow.py  build_body.py  build_filter_reference.py  build_pole_atlas.py  build_release_shortlist.py  build_rotor_strip.py  check_forge_candidate.py  compile_grid.py  compile_raw.py  emit_fg_presets_header.py  extract_notebooklm_corpus.py  forge_server.py  forge_write.py  frame_foundry.py  generate_bark_experiments.py  generate_original_bench_bank.py  measure_ui.py  morph_lattice_constants.py  parity_matrix.py  parity_null.py  plan_stages_from_bark_map.py  plot_cheatcodes.py  plot_heritage_magnitude.py  plot_m0_m100.py  plot_magnitude.py  plot_small_talk_ah_ee.py  plot_stage_accumulation.py  plot_stage_pairs.py  plot_top_candidates.py  probe_frequency_palette.py  promote_calibration.py  (+15 more)
authoring/design/: README.md
authoring/dirty_airlock/: README.md
authoring/emu_designer/: filter_001_demo.json  talking_001.json
authoring/function_packs/: trench_motion_pack_v0.json
authoring/ground_truth/: README.md
authoring/history/: README.md
authoring/plots/: Meaty_Gizmo.json  Ooh_to_Eee_(approx).json
authoring/schemas/: trench.authoring_path.cube.v1.schema.json  trench.compiled.cube_surface.v1.schema.json
authoring/scratch/: ah_to_ee_planner_baseline.md.json  ah_to_ee_planner_v2.compiled.json  ah_to_ee_planner_v2.md.json  ah_to_ee_planner_v2.raw.json  ah_to_ee_qlaw.compiled.json  ah_to_ee_qlaw.raw.json  ah_to_ee_qlaw.vault.json  build_hedz_and_p2k.py  build_talking_hedz.py  compare_to_calibration.py  compiled_to_vault.py  crossnull_diag.py  earbender_md_fingerprint.py  engine_vs_canonical.py  hedz.pill.json  plot_ah_to_ee_qlaw.py  plot_ah_to_ee_v2.py  resample_talking_hedz.py  step0_hedz_vs_calibration.py  talking_hedz.compiled.json  talking_hedz_fidelity.txt  talking_hedz_p2k.pill.json  talking_hedz_resample.txt  talking_hedz_verify.txt  test_rust_resampler.py  verify_talking_hedz_fidelity.py  xlang_null.py
authoring/sonic_tables/: README.md
authoring/tools/: authoring_studio.py  boost_normalizer.py  design_df2.py  extreme_carve.py  forge_cli.py  hand_authored.py  iconic_author.py  iconic_author_dry_run.py  mine_variants.py  morph_grid_scanner.py  phoneme_author_studio.py  pill.py  proof_ab.py  proof_c0_attenuation.py  render_reference.py  sift.py  (+1 more)
cartridges/: Acid_Squelch_77.json
dev/: SESSION_STATE.md
docs/: archive_symbol_inventory_2026-04-09.json  archive_symbol_inventory_2026-04-09.md  audit_p2k_corpus.md  body_authoring_seed.md  dsp-spec.md  handoff_2026-04-09_release_gate_and_comparisons.md  handoff_2026-04-18-session-close.md  heritage_dillusionman_peak_shelf_morph.md  hostile_authoring_workflow_spec.md  modulation_exploration.md  p2k_role_vocabulary_workflow.md  phase1_bass_pressure_vertical_slice.md  shipping_backbone_map.md  trench_master_prompt_library.md  world_body_candidate_schema.md  world_q_behavior_gate_spec.md
plots/: filter_index.py  p2k_filter_index.json  plot_filters.py  png_plotter.py
pyruntime/: CLAUDE.md  __init__.py  analysis.py  api.py  body.py  calibration_to_body.py  compiled_v1.py  constants.py  corner.py  designer_compile.py  drive.py  encode.py  forge_batch.py  forge_generator.py  forge_heritage_optimize.py  forge_optimize.py  forge_plot.py  forge_roll.py  forge_session.py  forge_shipping.py  forge_shipping_finalists.py  forge_trajectory.py  forge_v2.py  freq_response.py  heritage_coeffs.py  macro_compile.py  minifloat.py  preset_audit.py  preset_schema.py  render.py  role_vocab.py  session.py  splice.py  stage_math.py  stage_params.py  stage_roles.py  target.py  validator.py  zero_law.py
resources/: emu_zplane_filter_types.xml  emu_zplane_reference.xml
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tests/: test_extract_emu_filter_params.py
tools/: author_bismuth_shrapnel.py  author_sk_heritage.py  author_sonic_bank.py  author_speaker_knockerz.py  author_speaker_knockerz_batch.py  author_speaker_knockerz_current_runtime_v1.py  author_speaker_knockerz_v3_repro.py  bake_hedz_const.py  bake_hedz_from_p2k.py  bake_md_live.py  bake_phoneme_pills.py  bake_small_talk_ah_ee.py  body_author.py  build_atlas_html.py  build_emotion_stress_corpus.py  build_filter_reference.py  build_p2k_role_vocabulary.py  build_phoneme_atlas.py  build_shipping_role_targets.py  compare_shipping_to_emu_stages.py  compile_cube.py  compile_grid.py  compile_pill.py  compile_raw.py  crack_p2k.py  extract_emu_filter_params.py  flagship_gen.py  forge_pymoo.py  forge_view.py  generate_shipping_plots.py  genetic_splice.py  hardware_parity_batch.py  hardware_parity_check.py  heritage_splice.py  hotswap_vocal_pack.ps1  inventory_archive_symbols.py  label_overnight_candidates.py  layout_editor.py  mass_generate.py  measure_body.py  (+31 more)
trench-codec/: Cargo.toml
trench-core/: CLAUDE.md  Cargo.toml
trench-forge-dev/: Cargo.toml
trench-forge-dev/src/: lib.rs
trench-live/: Cargo.toml
trench-live/src/: editor.rs  lib.rs
vault/: guided_smoke.json  phone_friendly_export.json
(+1106 files in other folders)
