[package]
name = "trench-live"
version = "0.1.0"
edition = "2021"

[lib]
# The `lib` artifact is needed for the standalone bin target.
crate-type = ["cdylib", "lib"]

[[bin]]
name = "trench-live"
path = "src/bin/trench-live.rs"

# Audio-thread purity: only nih-plug (plugin framework), nih_plug_vizia
# (editor, runs on the GUI thread only), and trench-core (pure DSP)
# are allowed. No serde, no softbuffer, no crossbeam on the hot path,
# no raw-window-handle helpers in `process()`, no filesystem poll,
# no JSON reloader, no mutex on the hot path. Adding a dep here is a
# doctrine decision: it must not run inside `process()`.
[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["standalone"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
trench-core = { path = "../trench-core" }
